tests/NormalTests/paczka1/fuzzy1/88715473.err
Error in line 22: QO4ZSK A145 41,0
Error in line 23: QO4ZSK S491 33,7
Error in line 33: D7OYV3D S326 80,7
